# nexus-cli

./: .gitignore  README.md  pyproject.toml
src/nexus/: __main__.py  cli.py
src/nexus/client/: __init__.py  nexus_client.py
src/nexus/commands/: download.py  search.py  upload.py
src/nexus/config/: __init__.py  settings.py
src/nexus_cli/: __init__.py  __main__.py  cli.py
src/nexus_cli/client/: __init__.py
src/nexus_cli/commands/: download.py  list.py  search.py  upload.py
src/nexus_cli/config/: __init__.py  settings.py
tests/: __init__.py  conftest.py  test_download.py  test_list.py  test_search.py  test_upload.py
